# ssIMS

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  app.py  asgi.py  pyproject.toml  render.yaml  requirements.txt  wsgi.py
.github/workflows/: ci.yml
assets/: _session_guard.js  custom.css
assets/tutorials/: admin-guide.html  index.html  manager-guide.html  stock-clerk-guide.html
capital_pay_inventory/: README.md  app.py  requirements.txt
capital_pay_inventory/assets/: custom.css
capital_pay_inventory/components/: __init__.py  branding.py  layout.py  theme.py
capital_pay_inventory/database/: __init__.py  dal.py  engine.py  fastapi_session.py  models.py  pg_url.py  seed.py
capital_pay_inventory/pages/: __init__.py  auditing.py  config.py  dashboard.py  inventory.py  login.py  monitoring.py  movements.py  purchase_orders.py  reports.py  suppliers.py  users.py
capital_pay_inventory/utils/: auth.py  eoq.py  fifo.py
components/: branding.py  charts.py  layout.py  page.py  theme.py
database/: check_tcp.py  clear_all_data.py  create_bootstrap_admin.py  create_schema.py  dal.py  engine.py  models.py  pg_url.py  reset_users.py  seed.py  ss.sql
deploy/ecs/: README.md  run-bootstrap-admin.json  (+2 more)
pages/: approvals.py  auditing.py  config.py  customers.py  dashboard.py  inventory.py  kits_bom.py  locations.py  login.py  monitoring.py  movements.py  purchase_orders.py  reports.py  sales_orders.py  suppliers.py  users.py  welcome.py
routes/: __init__.py  api_v1.py  fastapi_db.py  public.py
scripts/: generate_branding.py
templates/: _base.html  login.html  welcome.html
utils/: app_text.py  auth.py  i18n.py  logging_config.py  navigation.py  predictive_analytics.py  server_config.py
(+1 files in other folders)
